--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env:
       PORT: 8000
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
+    startCommand: "uvicorn app:app --host 0.0.0.0 --port $PORT"
     routes:
       - path: /predict
         methods: [POST]
